2.2.0/_sources/arcgis.learn.toc.rst.txt
arcgis.learn module
====================

.. automodule:: arcgis.learn

Data Preparation Methods
------------------------
export_training_data
^^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.export_training_data

export_point_dataset
^^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.export_point_dataset

estimate_batch_size
^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.estimate_batch_size

prepare_data
^^^^^^^^^^^^
.. autofunction:: arcgis.learn.prepare_data

prepare_tabulardata
^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.prepare_tabulardata

prepare_textdata
^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.prepare_textdata

Transform3d
^^^^^^^^^^^
.. autoclass:: arcgis.learn.Transform3d
    :members:
    :undoc-members:


Automated Machine Learning
----------------------------
AutoML
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.AutoML
    :members:
    :inherited-members:
    :undoc-members:

AutoDL
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.AutoDL
    :members:
    :inherited-members:

ImageryModel
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.ImageryModel
    :members:
    :inherited-members:
    :undoc-members:

Object Classification Models
----------------------------
FeatureClassifier
^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.FeatureClassifier
    :members:
    :inherited-members:
    :undoc-members:

Object Detection Models
-----------------------
FasterRCNN
^^^^^^^^^^
.. autoclass:: arcgis.learn.FasterRCNN
    :members:
    :inherited-members:
    :undoc-members:

RetinaNet
^^^^^^^^^
.. autoclass:: arcgis.learn.RetinaNet
    :members:
    :inherited-members:
    :undoc-members:

YOLOv3
^^^^^^
.. autoclass:: arcgis.learn.YOLOv3
    :members:
    :inherited-members:
    :undoc-members:

SingleShotDetector
^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.SingleShotDetector
    :members:
    :inherited-members:
    :undoc-members:

MaskRCNN
^^^^^^^^
.. autoclass:: arcgis.learn.MaskRCNN
    :members:
    :inherited-members:
    :undoc-members:

MMDetection
^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.MMDetection
    :members:
    :inherited-members:
    :undoc-members:

DETReg
^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.DETReg
    :members:
    :inherited-members:
    :undoc-members:

EfficientDet
^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.EfficientDet
    :members:
    :inherited-members:
    :undoc-members:

Pixel Classification Models
---------------------------
UnetClassifier
^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.UnetClassifier
    :members:
    :inherited-members:
    :undoc-members:

PSPNetClassifier
^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.PSPNetClassifier
    :members:
    :inherited-members:
    :undoc-members:

DeepLab
^^^^^^^
.. autoclass:: arcgis.learn.DeepLab
    :members:
    :inherited-members:
    :undoc-members:

BDCNEdgeDetector
^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.BDCNEdgeDetector
    :members:
    :inherited-members:
    :undoc-members:

HEDEdgeDetector
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.HEDEdgeDetector
    :members:
    :inherited-members:
    :undoc-members:

MultiTaskRoadExtractor
^^^^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.MultiTaskRoadExtractor
    :members:
    :inherited-members:
    :undoc-members:

ConnectNet
^^^^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.ConnectNet
    :members:
    :inherited-members:
    :undoc-members:

ChangeDetector
^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.ChangeDetector
    :members:
    :inherited-members:
    :undoc-members:

MMSegmentation
^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.MMSegmentation
    :members:
    :inherited-members:
    :undoc-members:

MaXDeepLab
^^^^^^^^^^
.. autoclass:: arcgis.learn.MaXDeepLab
    :members:
    :inherited-members:
    :undoc-members:

Image Translation Models
------------------------
CycleGAN
^^^^^^^^
.. autoclass:: arcgis.learn.CycleGAN
    :members:
    :inherited-members:
    :undoc-members:

Pix2Pix
^^^^^^^^
.. autoclass:: arcgis.learn.Pix2Pix
    :members:
    :inherited-members:
    :undoc-members:

Pix2PixHD
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.Pix2PixHD
    :members:
    :inherited-members:
    :undoc-members:

WNet_cGAN
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.WNet_cGAN
    :members:
    :inherited-members:
    :undoc-members:

SuperResolution
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.SuperResolution
    :members:
    :inherited-members:
    :undoc-members:

ImageCaptioner
^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.ImageCaptioner
    :members:
    :inherited-members:
    :undoc-members:

3D Models
---------
PointCNN
^^^^^^^^
.. autoclass:: arcgis.learn.PointCNN
    :members:
    :inherited-members:
    :undoc-members:

RandLANet
^^^^^^^^
.. autoclass:: arcgis.learn.RandLANet
    :members:
    :inherited-members:
    :undoc-members:

SQNSeg
^^^^^^^^
.. autoclass:: arcgis.learn.SQNSeg
    :members:
    :inherited-members:
    :undoc-members:

MMDetection3D
^^^^^^^^
.. autoclass:: arcgis.learn.MMDetection3D
    :members:
    :inherited-members:
    :undoc-members:

Object Tracking Models
------------------------
SiamMask
^^^^^^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.SiamMask
    :members:
    :inherited-members:

DeepSort
^^^^^^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.DeepSort
    :members:
    :inherited-members:

ObjectTracker
^^^^^^^^^^
.. autoclass:: arcgis.learn.ObjectTracker
    :members:
    :inherited-members:
    :undoc-members:

Track
^^^^^^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.Track
    :members:
    :inherited-members:

Scanned Maps
------------
ScannedMapDigitizer
^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.ScannedMapDigitizer
    :members:

Feature, Tabular and Timeseries models
--------------------------------------
FullyConnectedNetwork
^^^^^^^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.FullyConnectedNetwork
    :members:
    :inherited-members:
    :undoc-members:

MLModel
^^^^^^^
.. autoclass:: arcgis.learn.MLModel
    :members:
    :inherited-members:
    :undoc-members:

TimeSeriesModel
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.TimeSeriesModel
    :members:
    :inherited-members:
    :undoc-members:

PSETAE
^^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.PSETAE
    :members:
    :inherited-members:
    :undoc-members:

Unstructured Text Models
------------------------
arcgis.learn.text module
^^^^^^^^^^^^^^^^^^^^^^^^
.. toctree::
   :maxdepth: 3

   arcgis.learn.text


Inferencing Methods
----------------------------------
detect_objects
^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.detect_objects

classify_objects
^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.classify_objects
    
classify_pixels
^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.classify_pixels

compute_accuracy_for_object_detection
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.compute_accuracy_for_object_detection

detect_change_using_deep_learning
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.. autofunction:: arcgis.learn.detect_change_using_deep_learning

Embeddings
^^^^^^^^^^
.. autoclass:: arcgis.learn.Embeddings
    :members:
    :inherited-members:
    :undoc-members:

Model Management
----------------
Model
^^^^^
.. autoclass:: arcgis.learn.Model
    :members:
    :undoc-members:

ModelExtension
^^^^^^^^^^^^^^
.. autoclass:: arcgis.learn.ModelExtension
    :members:
    :inherited-members:
    :undoc-members:

list_models
^^^^^^^^^^^
.. autofunction:: arcgis.learn.list_models

train_model
^^^^^^^^^^^
.. autofunction:: arcgis.learn.train_model




